Fix side bar z-index

--- a/src/assets/styles/cmps/_google-modal.scss
+++ b/src/assets/styles/cmps/_google-modal.scss
@@ -7,7 +7,7 @@
   width: 100vw;
   height: 100dvh;
 
-  // background-color: $backdrop-clr;
+  background-color: $backdrop-clr;
   --animate-duration: 0.2s;
 }
 
